--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "axios-mock-adapter": "^1.16.0",
     "core-js": "^2.6.5",
     "lodash": "^4.17.11",
     "register-service-worker": "^1.6.2",
@@ -18,7 +20,8 @@
     "vue-property-decorator": "^8.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "vuex-module-decorators": "^0.9.8"
+    "vuex-module-decorators": "^0.9.8",
+    "vuex-persist": "^2.0.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.0",
