--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "alertifyjs": "^1.11.2",
     "axios": "^0.18.0",
     "axios-mock-adapter": "^1.16.0",
     "core-js": "^2.6.5",
@@ -17,6 +18,8 @@
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
+    "vue-js-modal": "^1.3.28",
+    "vue-notification": "^1.3.16",
     "vue-property-decorator": "^8.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
