--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios-mock-adapter": "^1.16.0",
     "core-js": "^2.6.5",
     "lodash": "^4.17.11",
+    "lodash-decorators": "^6.0.1",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
