--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "axios-mock-adapter": "^1.16.0",
     "core-js": "^2.6.5",
     "lodash": "^4.17.11",
-    "lodash-decorators": "^6.0.1",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
@@ -48,6 +47,7 @@
     "fibers": "^3.1.1",
     "sass": "^1.17.2",
     "sass-loader": "^7.1.0",
+    "tailwindcss": "^1.0.0-beta.4",
     "ts-jest": "^23.0.0",
     "typescript": "^3.2.1",
     "vue-template-compiler": "^2.5.21"
