--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.11",
     "lodash-id": "^0.14.0",
     "lowdb": "^1.0.0",
+    "normalize.css": "^8.0.1",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
@@ -49,7 +50,7 @@
     "fibers": "^3.1.1",
     "sass": "^1.17.2",
     "sass-loader": "^7.1.0",
-    "tailwindcss": "^1.0.0-beta.4",
+    "tailwindcss": "^0.7.4",
     "ts-jest": "^23.0.0",
     "typescript": "^3.2.1",
     "vue-template-compiler": "^2.5.21"
