--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lowdb": "^1.0.0",
     "normalize.css": "^8.0.1",
     "register-service-worker": "^1.6.2",
+    "vee-validate": "^2.2.3",
     "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
     "vue-js-modal": "^1.3.28",
